--- a/models/AUTHORS
+++ b/models/AUTHORS
@@ -3,4 +3,4 @@ individual contributors to this project are:
 Suntha Lucas <Suntha.Lucas@atlasschool.com>
 Suntha Lucas <Laurese51@gmail.com>
              <Suntha.Lucas@linkedin.com>
-Kevin Cyrus Jr. <Kevin.CyrusJr@atlasschool.com>
+Kevin Cyrus Jr. <Kevcyjunior@gmail.com>
